force-app/main/default/objects/Booking_Verification_Template__c/Booking_Verification_Template__c.object-meta.xml
<CustomObject>
    <description>Defines a reusable Booking Verification template matched to a Business Unit and Country. A published template drives generation of BV Checklist Items and Document Checklist Items when a deal reaches the Solutioning stage.</description>
    <label>Booking Verification Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booking Verification Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>