force-app/main/default/objects/Booking_Verification_Template__c/fields/Template_Owner__c.field-meta.xml
<CustomField>
    <fullName>Template_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User responsible for maintaining this template.</description>
    <label>Template Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Owned BV Templates</relationshipLabel>
    <relationshipName>Owned_BV_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>