force-app/main/default/objects/Booking_Verification_Template__c/validationRules/Published_Template_Requires_BU_Country.validationRule-meta.xml
<ValidationRule>
    <fullName>Published_Template_Requires_BU_Country</fullName>
    <active>true</active>
    <description>Blocks publishing a template without Business Unit and Country. Exempt: the fallback template named by label BV_Default_Template_Name (BU/Country agnostic).</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Published&quot;),
    Name &lt;&gt; $Label.BV_Default_Template_Name,
    OR(ISBLANK(TEXT(Business_Unit__c)), ISBLANK(TEXT(Country__c)))
)</errorConditionFormula>
    <errorMessage>Business Unit and Country are required before a template can be Published.</errorMessage>
</ValidationRule>